2012-12-12  Jonas Bernoulli  <jonas@bernoul.li>

	* lisp/emacs-lisp/eieio.el: Prettier object pretty-printing (bug#13115).
	(eieio-override-prin1): Don't quote kewords and booleans.
	(object-write) <eieio-default-superclass>: Don't put closing parens
	on new line, avoid needless empty lines, align values that are objects
	with the slot keyword (instead of beginning on the same line).
	(eieio-list-prin1): Align value with slot keyword; increase
	eieio-print-depth before printing members of the list.

2012-12-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mail/emacsbug.el (report-emacs-bug): Move the intangible text to
	a display text-property.
	(report-emacs-bug-hook): Don't bother deleting it any more.

	* hilit-chg.el (highlight-save-buffer-state): Delete.
	Use with-silent-modifications instead.
	(hilit-chg-set-face-on-change): Only fixup the text that's modified.

	* button.el: Handle buttons in display text-properties.
	(button--area-button-p, button--area-button-string):
	Use (STRING . STRING-POS) representation instead of just STRING.

2012-12-11  Eli Zaretskii  <eliz@gnu.org>

	* makefile.w32-in (compile4-SH): Fix a typo that caused term
	subdirectory be skipped.

2012-12-11  Glenn Morris  <rgm@gnu.org>

	* net/rcirc.el (rcirc-urls, rcirc-condition-filter): Doc fixes.

	* progmodes/f90.el (f90-line-continued, f90-indent-region):
	Treat preprocessor lines embedded in continuations like comments.
	(f90-indent-line): Special-case preprocessor lines.  (Bug#13138)

2012-12-11  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc.el (calc-standard-date-formats):  Add more date
	formats.
	* calc/calc-forms.el (math-parse-iso-date): New function.
	(math-parse-date): Use `math-parse-iso-date' when appropriate.
	(math-parse-iso-date-validate): Add extra error checking.
	(calc-date-notation): Add ability to access new date formats.

2012-12-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* hi-lock.el (hi-lock--regexps-at-point): Fix boundary case for