@@ -1,3 +1,7 @@
+2012-12-12  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* mpc.el (mpc-format): Use truncate-string-to-width (bug#13143).
+
 2012-12-12  Jonas Bernoulli  <jonas@bernoul.li>
 
 	* lisp/emacs-lisp/eieio.el: Prettier object pretty-printing (bug#13115).
